--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <BODY>
 <P>Welcome to J. David's webserver.
 <H1>CGI demo
-<FORM ACTION="color.sh" METHOD="POST">
+<FORM ACTION="htdocs/color.sh" METHOD="POST">
 Enter a color: <INPUT TYPE="text" NAME="color">
 <INPUT TYPE="submit">
 </FORM>
-    <IMG src="./123.png"></P></IMG>
-<audio controls="controls" src="123.mp3"></audio>
-<video controls="controls" src="123.ogg"></video>
+    <IMG src="htdocs/123.png"></P></IMG>
+<audio controls="controls" src="htdocs/123.mp3"></audio>
+<video controls="controls" src="htdocs/123.ogg"></video>
 <H1>CGI demo
-    <FORM ACTION="color.sh" METHOD="POST">
+    <FORM ACTION="htdocs/color.sh" METHOD="POST">
         Enter a color: <INPUT TYPE="text" NAME="color">
         <INPUT TYPE="submit">
     </FORM>
